# mathlab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  global.h  main.cpp  scene.cpp  scene.h  shader.fs  shader.h  shader.vs  triangle.h
src/: global.h  main.cpp
src/data/: shader.fs
src/math/: line.cpp  line.h  shape.h  triangle.h
src/scene/: scene.cpp  scene.h
src/shader/: shader.cpp  shader.h
src/util/: vao.h  vbo.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
